# models/news.js
@@ -1,0 +1,25 @@
+const mongoose = require("mongoose");
+
+const newsArticleSchema = new mongoose.Schema(
+  {
+    image: {
+      type: String,
+      required: true,
+    },
+    title: {
+      type: String,
+      required: true,
+    },
+    text: {
+      type: String,
+      required: true,
+    },
+  },
+  {
+    timestamps: true,
+  }
+);
+
+const NewsArticle = mongoose.model("News", newsArticleSchema);
+
+module.exports = NewsArticle;
