# routers/news.js
@@ -1,0 +1,7 @@
+const router = require("express").Router();
+
+const { getAllNewsArticles } = require("../controllers/news");
+
+router.get("/all", getAllNewsArticles);
+
+module.exports = router;
